# jta-display-wall-adapter

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  PrepareForWindowsCompilation.md  README.md  RaspiDisplay.md  THIRD-PARTY-LICENSES-JS  THIRD-PARTY-LICENSES-RUST  THIRD_PARTY_LICENSES.md  build.rs  cam.md  diesel.toml  docker-compose.build.yml  docker-compose.buildlegacy.yml  docker-compose.buildrun.yml  docker-compose.buildwindows.yml  docker-compose.diesel.yml  docker-compose.run.yml  docker-compose.yml  image-debug-test.txt  results_data_test.txt  run.sh  start-jta-display-wall-adapter.bat
.cargo/: config.toml
assets/: LICENSES.md
assets/Fireworks/: LICENSE
code_generation/: Cargo.toml
code_generation/rust_to_ts_types/: Cargo.toml
code_generation/rust_to_ts_types/rust_to_ts_types_derive/: Cargo.toml
code_generation/rust_to_ts_types/rust_to_ts_types_derive/src/: lib.rs
code_generation/rust_to_ts_types/src/: lib.rs
code_generation/src/: main.rs
docker/build_legacy/: Dockerfile
docker/compile_windows/: Dockerfile
docker/dev/: Dockerfile
docker/diesel/: Dockerfile
docker/net-binary-parser/: BinaryParserWeb.csproj  Dockerfile  Program.cs
docker/run/: Dockerfile
images_cache_builder/: Cargo.toml  build.rs
images_cache_builder/src/: lib.rs
images_core/: Cargo.toml
images_core/src/: images.rs
src/: args.rs  bitmap.rs  client.rs  file.rs  forwarding.rs  helpers.rs  hex.rs  images.rs  instructions.rs  instructionsa.rs  interface.rs  json.rs  lib.rs  main.rs  nrbf.rs  productkey.rs  rasterizing.rs  rendering.rs  server.rs  times.rs  xml_serial.rs
src/client/: bitmap.rs  frametime.rs  mod.rs  rasterizing.rs  rendering.rs  timing.rs
src/client/parts/: app.rs  client.rs  mod.rs  tcp.rs
src/database/: database_mapping.rs  db.rs  mod.rs  schema.patch  schema.rs
src/database/migrations/: .gitignore
src/database/migrations/2025-11-22-205212_heat_starts/: down.sql  up.sql
src/idcapture/: Readme.md  example_messages.txt  idcapture_format.rs  messages_log.txt  mod.rs
src/idcapture/parts/: capturing.rs  idcapture_server.rs  mod.rs  tcp.rs
src/server/: bib_detection.rs  camera_program_datatypes.rs  comm_channel.rs  forwarding.rs  mod.rs  nrbf.rs  server.rs  xml_serial.rs
src/server/parts/: audio.rs  client_communicator.rs  database.rs  export.rs  intake_commands.rs  mod.rs  server.rs  tcp_client_camera_program.rs  tcp_forwarder_display_program.rs  tcp_listener_bib_detection.rs  tcp_listener_idcapture_server.rs  tcp_listener_timing_program.rs  tcp_listener_wind_server.rs
src/webserver/: interface.rs  mod.rs  routes.rs  static_files.rs  web.rs
src/wind/: mod.rs  wind_exchange_format.rs
src/wind/parts/: comport_adapter.rs  mod.rs  tcp.rs  usb_sniffer_parser.rs  wind_communication_parser.rs  wind_server.rs  wind_state_management.rs
usb_sniffer/: Cargo.toml  Readme.md  sample_data.txt
usb_sniffer/src/: main.rs
web_client/: index.html  package-lock.json  package.json  vite.config.ts
web_client/src/: App.vue  app.ts  router.ts
web_client/src/components/: BibInterface.vue  BibInterfaceInternal.vue  ConnectionState.vue  Debug.vue  Heats.vue  ImportDialog.vue  Index.vue  InitDB.vue  Logs.vue  ManageAthletes.vue  PDFPrint.vue  PDFSettings.vue  PDFSettingsTable.vue  PDFTest.vue  PDFViewer.vue  SPKStateDot.vue  StreetRunStateDot.vue  Timing.vue  TimingButtons.vue  WindRequest.vue
web_client/src/functions/: backgroundFiles.ts  circularBuffer.ts  date.ts  environment.ts  fileStorage.ts  importInterface.ts  interfaceInbound.ts  interfaceOutbound.ts  interfaceShared.ts  pdf.ts  representation.ts  sharedAthleteTypes.ts
web_client/src/plugins/: vuetify.ts
web_client/src/stores/: auth.ts  debug.ts  main.ts
web_client/src/styles/: styles.scss  vuetifywrapper.scss
(+31 files in other folders)
