[package]
name = "jta-display-wall-adapter"
version = "0.0.0"
description = "Software used for running custom display walls"
authors = ["jonas-kell"]
repository = "https://github.com/jonas-kell/jta-display-wall-adapter"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

env_logger = "0.10"
log = "0.4"

image = "0.25.8"

async-channel = "2.3.1"

chrono = "0.4.42"