[package]
name = "jta-display-wall-adapter"
version = "0.0.0"
description = "Software used for running custom display walls"
authors = ["jonas-kell"]
repository = "https://github.com/jonas-kell/jta-display-wall-adapter"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
env_logger = "0.10"
log = "0.4"
image = "0.25.8"
async-channel = "2.3.1"
chrono = { version = "0.4.42", features = ["serde"] }
nom = "8.0.0"
quick-xml = { version = "0.31", features = ["serialize"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
winit = "0.30"
pixels = "0.15.0"
fontdue = "0.9.3"
tokio-util = { version = "0.7.17", features = ["codec"] }
tokio-serde = { version = "0.9.0" , features = ["bincode"] } 
futures = "0.3.31"