[package]
name = "jta-display-wall-adapter"
version = "0.0.0"
description = "Software used for running custom display walls"
authors = ["jonas-kell"]
repository = "https://github.com/jonas-kell/jta-display-wall-adapter"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
env_logger = "0.10"
log = "0.4"
image = "0.25.8"
async-channel = "2.3.1"
async-broadcast = "0.7.2"
chrono = { version = "0.4.42", features = ["serde"] }
nom = "8.0.0"
quick-xml = { version = "0.31", features = ["serialize"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
winit = "0.30"
pixels = "0.15.0"
fontdue = "0.9.3"
tokio-util = { version = "0.7.17", features = ["codec"] }
tokio-serde = { version = "0.9.0" , features = ["bincode", "json"] } 
futures = "0.3.31"
actix-web = "4.9"
actix-cors = "0.7.0"
mime_guess = "2.0"
open = "5.3.1"
local-ip-address = "0.6.3"
actix-ws = "0.3"
include_dir = "0.7.4"
libsqlite3-sys = { version = "0.29", features = ["bundled"] }
diesel = { version = "2.2.12", features = ["sqlite", "uuid", "chrono", "r2d2"] }
diesel_migrations = "2.3"
r2d2 = "0.8"
rodio = "0.21.1"
serialport = "4.1"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"

images_core = { path = "./images_core" }

[build-dependencies]
images_core = { path = "./images_core" }